(core) Fix CustomView css to take full height of widget on all browsers including Safari
Summary: On Safari, in particular on mobile, the custom widget was truncated in height.

Test Plan: Tested manually on FF, Chrome, Safari (desktop) and Safari, Firefox (mobile)

Reviewers: paulfitz

Reviewed By: paulfitz

Subscribers: paulfitz

Differential Revision: https://phab.getgrist.com/D2629

--- a/app/client/components/CustomView.css
+++ b/app/client/components/CustomView.css
@@ -1,6 +1,7 @@
 iframe.custom_view {
   border: none;
   height: 100%;
+  flex: auto;
 }
 
 .custom_view_notification {
